# Thomath

./: CMakeLists.txt  LICENSE  Matrix4.cpp  Matrix4.h  Quaternion.h  README.md  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  constants.h  getfiles.sh  include.txt  routines.h  src.txt  thomath.h
include/: Matrix4.h  Matrix4.hpp  Quaternion.hpp  Vector2.h  Vector3.hpp  Vector4.h  Vector4.hpp  constants.h  constants.hpp  routines.h  routines.hpp  thomath.hpp
src/: Matrix4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
test/: CMakeLists.txt  main.cpp  unit_tests.h
